# django-afa

./: pyproject.toml  runtests.py  tox.ini
afa/: afa2json.py  apps.py  models.py
afa/migrations/: 0001_initial.py
afa/tests/: settings.py  tests.py
