[tool.poetry]
name = "django-afa"
version = "0.1.0"
description = "Aufwendungen für Abschreibung"
authors = ["Florian Rämisch <olf@subsignal.org>"]
license = "GPL-3.0"

[tool.poetry.scripts]
afa2json = "afa.afa2json:main"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
requests = "^2.25.1"
django-money = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
pytest = "^6.2.3"
pre-commit = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
